# pal-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.py  docker-compose.yml  instructions.py  mcp_server.py  pyproject.toml  requirements.txt  server.py  standard_server_fixed.py  start.sh  tools.py
docs/plans/: 2026-05-16-fastmcp-migration.md
files/: CLAUDE.md  README.md
scripts/: meilisearch-backup.sh  setup-notes.sh
src/pal/: __init__.py  __main__.py  config.py  oauth.py  server.py
src/pal/instructions/: __init__.py  defaults.py  loader.py
src/pal/prompts/: __init__.py  defaults.py  loader.py
src/pal/prompts/bundled/: block.md  curl.md  fix.md  git.md  grep.md  help.md  lorem-ipsum.md  notes.md  review.md  root.md  session.md  tag.md  tags.md  test.md
src/pal/prompts/bundled/git/: add.md  branch.md  commit.md  diff.md  log.md  stash.md  status.md  undo.md
src/pal/prompts/bundled/notes/: add.md  ai.md  delete.md  help.md  list.md  search.md  tags.md  view.md
src/pal/tools/: __init__.py  curl.py  handlers.py  notes.py  parser.py  pipeline.py  registry.py  types.py
tests/: __init__.py  conftest.py  test_handlers.py  test_instructions.py  test_parser.py  test_pipeline.py  test_prompts.py  test_registry.py
